# Netbee

./: license.txt  readme-compile.htm
doxygen/: nbee_mainpage.txt
include/: .gitignore  nbee_packetdecoderutils.h  nbee_packetengine.h  nbpflcompiler.h
samples/: CMakeLists.txt  makesamples.sln.devpack
samples/nbee/downloadnetpdldb/: CMakeLists.txt  downloadnetpdldb.cpp  downloadnetpdldb.vcproj.devpack
samples/nbee/fieldextractor/: fieldextractor.cpp
samples/nbee/pdmlfieldextractor/: pdmlfieldextractor.cpp
samples/nbnetvm/netvmexec/: utils.c
samples/nbpflcompiler/filtercompiler/: filtercompiler.cpp
samples/nbprotodb/protodbdump/: protodbdump.cpp
src/: CMakeLists.txt
src/nbee/: CMakeLists.txt
src/nbee/decoder/: netpdldecoder.cpp  netpdldecoderutils.cpp  netpdlexpression.cpp  netpdlprotodecoder.cpp  netpdlstandardvars.cpp  netpdlstandardvars.h  netpdlvariables.h  pdmlmaker.cpp  pdmlreader.cpp  pdmlreader.h  psmlmaker.cpp  pxmlreader.cpp  pxmlreader.h
src/nbee/decoder/decoderplugin/: decoder_plugin.h
src/nbee/decoder/showplugin/: show_plugin.h
src/nbee/globals/: debug.c  debug.h  globals.h  utils.c  utils.h
src/nbee/misc/: update_netpdlfile.cpp
src/nbee/nbpacketengine/: fieldreader.cpp  nbeefieldreader.h  nbeepacketengine.h  nbpacketengine.cpp
src/nbee/netvm/: netvmbytecode.cpp
src/nbee/packetprocessing/: packet_pcapdumpfile.cpp  packet_pcapdumpfile.h
src/nbee/utils/: asciibuffer.cpp  asciibuffer.h  netpdlutils.c  netpdlutils.h
src/nbnetvm/: .gitignore  CMakeLists.txt  helpers.c  helpers.h  netvmprofiling.cpp  rt_environment.c  rt_environment.h
src/nbnetvm/arch/generic/: generic_interpreter.c  generic_runtime.c
src/nbnetvm/arch/generic/coprocessors/: acsmx2.c  regexp.c  stringmatching.c
src/nbnetvm/arch/octeon/: octeon_interpreter.c
src/nbnetvm/assembler/: .gitignore  netil_assembler.c  nvm_gramm.y  scanner-template.l
src/nbnetvm/jit/: .gitignore  bytecode_analyse.cpp  cfg_bytecode_builder.h  cfg_edge_splitter.h  copy_folding.h  iltranslator.cpp  insselector.h  jit_interface.cpp  op_size.cpp  switch_lowering.cpp
src/nbnetvm/jit/ia32/: x86-asm.cpp  x86-asm.def
src/nbnetvm/jit/ia32/x86disasm/: decode.c  dis_types.h  extern.h  input.c  input.h  mnemonics.c  mnemonics.h  opcmap.c  opcmap.h  syn-att.c  syn-intel.c  syn.h  udis86.c  udis86.h
src/nbnetvm/jit/ia32/x86disasm/docs/: doc.html  index.html
src/nbnetvm/jit/opt/: bcheck_remove.h  nvm_optimizer.h  reassociation.h
src/nbnetvm/jit/x64/: inssel-x64.brg  x64-asm.cpp  x64-asm.def  x64-asm.h  x64-backend.cpp  x64-emit.cpp  x64-emit.h  x64_switch_lowering.cpp
src/nbnetvm/netvm_ir/: basicblock.h  cfg.h  digraph.h  register_mapping.h
src/nbnetvm/tools/makenetilscanner/: .gitignore
src/nbnetvm/tools/makeopcodetable/: .gitignore
src/nbnetvm/tools/netvmburg/: .gitignore  CMakeLists.txt  netvmburg.cpp  netvmburg.h  netvmburg.y
src/nbnetvm/utils/: dlinkedlst.c  hashtbl.c  hashtblgen.c  slinkedlst.c
src/nbpflcompiler/: .gitignore  CMakeLists.txt  cfg_edge_splitter.h  cfgwriter.cpp  compile.h  compunit.cpp  compunit.h  defs.h  dump.cpp  dump.h  errors.cpp  errors.h  filtersubgraph.cpp  globalinfo.cpp  globalinfo.h  globalsymbols.cpp  globalsymbols.h  gramm.y  ircodegen.cpp  ircodegen.h  irlowering.cpp  irlowering.h  irnoderegrenamer.cpp  irnoderegrenamer.h  iroperators.h  irops.h  lircodegen.cpp  lircodegen.h  nbpflcompiler.cpp  netiltracebuilder.cpp  netiltracebuilder.h  netpflfrontend.cpp  netpflfrontend.h  node_translation.cpp  node_translation.h  optcanonic.cpp  optcanonic.h  optconstprop.cpp  optconstprop.h  optcontrolflow.cpp  (+29 more)
src/nbprotodb/: .gitignore  CMakeLists.txt  elements_create.cpp  elements_create.h  elements_delete.cpp  elements_organize.cpp  elements_organize.h  expr-grammar.y  expr-scanner.l  expressions.cpp  expressions.h  lists_organize.cpp  protodb.cpp  sax_handler.cpp  sax_parser.cpp  sax_parser.h
tools/: CMakeLists.txt
tools/nbeedump/: .gitignore  CMakeLists.txt  configparams.cpp  configparams.h  nbeedump.cpp
tools/nbextractor/: .gitignore  CMakeLists.txt  README-sqlite  anonimize-ip.cpp  anonimize-ip.h  configparams.cpp  configparams.h  dump-sqlite.cpp  dump-sqlite.h  fieldprinter.cpp  fieldprinter.h  nbextractor.cpp
tools/nbsvchelper/: CMakeLists.txt
tools/utils/: debug.c  debug.h
